# pybarcodes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  README.rst  barcode.py  conf.py  ean.py  exceptions.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: python-package.yml  python-publish.yml
_build/doctrees/: README.doctree  environment.pickle  index.doctree
_build/doctrees/docs/: index.doctree  modules.doctree  pybarcodes.doctree
_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_sources/: README.rst.txt  index.rst.txt
_build/html/_sources/docs/: index.rst.txt  pybarcodes.rst.txt
_build/html/docs/: index.html  modules.html  pybarcodes.html
docs/: conf.py  index.rst  modules.rst  requirements.txt
docs/_build/doctrees/: conf.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree  pybarcodes.doctree  setup.doctree
docs/_build/html/: .buildinfo  conf.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  pybarcodes.html  search.html  searchindex.js  setup.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  pybarcodes.doctree
docs/_build/html/_modules/: index.html  pybarcodes.html
docs/_build/html/_modules/pybarcodes/: barcode.html  ean.html  exceptions.html
docs/_build/html/_sources/: modules.rst.txt
pybarcodes/: __init__.py  barcode.py  codes.py  ean.py  exceptions.py
pybarcodes/codings/: codex.py  ean.py
pycodes/: barcode.py  ean.py  exceptions.py
tests/: conftest.py  test_codes.py  test_ean.py  test_images.py  test_spec_fixtures.py
