[project]
name = "pybarcodes"
version = "1.0.2"
description = "A Python package for barcode generation"
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
  "barcode",
  "scanner",
  "generator",
  "ean13",
  "code39",
  "jan",
  "python",
]
include = ["fonts/*.ttf"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = ["pillow>8,<13"]

[project.urls]
Homepage = "https://github.com/atbuy/pybarcodes"
Repository = "https://github.com/atbuy/pybarcodes"
"Bug Tracker" = "https://github.com/atbuy/pybarcodes/issues"
"Source Code" = "https://github.com/atbuy/pybarcodes"
"CI/CD" = "https://github.com/atbuy/pybarcodes/actions"


[tool.poetry.group.tests.dependencies]
pytest = "9.0.2"
pytest-cov = "7.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
ruff = "0.15.1"

[build-system]
requires = ["poetry-core>=2"]
build-backend = "poetry.core.masonry.api"
