[project]
name = "pybarcodes"
version = "1.0.3"
description = "A Python package for barcode generation"
authors = [{ name = "atbuy", email = "buy@atbuy.dev" }]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.10"
keywords = [
  "barcode",
  "scanner",
  "generator",
  "ean13",
  "code39",
  "jan",
  "python",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = ["pillow>8,<13"]

[dependency-groups]
dev = ["pre-commit==4.6.0", "ruff==0.15.12"]
docs = ["numpydoc==1.8.0", "sphinx-rtd-theme==3.0.2"]
tests = ["pytest==9.0.3", "pytest-cov==7.1.0"]

[project.urls]
Homepage = "https://github.com/atbuy/pybarcodes"
Repository = "https://github.com/atbuy/pybarcodes"
"Bug Tracker" = "https://github.com/atbuy/pybarcodes/issues"
"Source Code" = "https://github.com/atbuy/pybarcodes"
"CI/CD" = "https://github.com/atbuy/pybarcodes/actions"

[tool.pytest.ini_options]
addopts = "--cov-fail-under=90"

[tool.setuptools.packages.find]
include = ["pybarcodes*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
